# ComfyUI_InvSR

./: .gitignore  README.md  __init__.py  node.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
InvSR/: config.json  inference_invsr.py  requirements.txt  sampler_invsr.py
InvSR/basicsr/data/: __init__.py  data_util.py  ffhq_dataset.py  paired_image_dataset.py  realesrgan_dataset.py  realesrgan_paired_dataset.py  reds_dataset.py  single_image_dataset.py  video_test_dataset.py  vimeo90k_dataset.py
InvSR/basicsr/utils/: options.py
InvSR/datapipe/: datasets.py
InvSR/src/diffusers.egg-info/: SOURCES.txt  requires.txt
comfyui_invsr_trimmed/: __init__.py  inference_invsr.py  noise_predictor.py  pipeline_stable_diffusion_inversion_sr.py  sampler_invsr.py  time_aware_encoder.py
comfyui_invsr_trimmed/utils/: util_color_fix.py  util_common.py  util_image.py  util_net.py
configs/: sample-sd-turbo.yaml  sd-turbo-sr-ldis.yaml
src/diffusers.egg-info/: PKG-INFO
workflows/: invsr.json
